# body-metrics-tracker

./: .gitignore  APP_CHANGES.md  BodyMetricsTracker.spec  README.md  RELEASING.md  pyinstaller_entry.py  pyproject.toml
.github/workflows/: release.yml
functions/: relay.js
functions/relay/: [...path].js  _path_.js
pwa/: README.md  app.js  index.html  manifest.webmanifest  sw.js
relay/: README.md  schema.sql  w.sh  worker.js  wrangler.toml
src/body_metrics_tracker/: __main__.py  config.py  resources.py
src/body_metrics_tracker/assets/: app_icon.icns
src/body_metrics_tracker/core/: __init__.py  aggregation.py  friend_code.py  link_code.py  models.py  units.py
src/body_metrics_tracker/gui/: admin.py  app.py  dialogs.py  friends.py  history.py  profile.py  state.py  sync.py  theme.py  trends.py  vault_admin.py  widgets.py  window.py
src/body_metrics_tracker/relay/: __init__.py  client.py
src/body_metrics_tracker/storage/: __init__.py  codec.py  crypto.py  store.py
src/body_metrics_tracker/sync/: __init__.py  client.py  models.py  vault_schema.py
src/body_metrics_tracker/vault/: __main__.py  crypto.py  server.py  store.py
